--- a/war/index.html
+++ b/war/index.html
@@ -4,7 +4,7 @@
     <title>channel chat</title>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 	<script src='/_ah/channel/jsapi'></script>
-	<script src='lib/jquery-1.6.1.min.js'></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </head>
 <script>
 
@@ -22,8 +22,8 @@
 	});
 
 	function sendMessage( pack ) {
-		$.post( "http://localhost:8888/chat",
-		//$.post( "http://channelchatservlet.appspot.com/chat",  
+		//$.post( "http://localhost:8888/chat",
+		$.post( "http://channelchatservlet.appspot.com/chat",  
 				pack, receiveMessage );
 	}	
 	
@@ -37,14 +37,13 @@
 			var token = data.token;
 			openChannel(token);	
 			
-			sendMessage( createTailPacket() );		
+			if( data.messages != null ) {
+				for( var i = 0; i < data.messages.length; i++ )
+					theChat.addMessage( data.messages[i] );			
+			}
 		}
 		else if( data.type == "message" ) {
 			theChat.addMessage(data);
-		}
-		else if( data.type == "tail" ) {
-			for( var i = 0; i < data.messages.length; i++ )
-				theChat.addMessage( data.messages[i] );
 		}
 	}
 	
@@ -79,12 +78,6 @@
 	function createLeavePacket() {
 		return {
 			type: "leave"
-		}
-	}
-	
-	function createTailPacket() {
-		return {
-			type: "get_tail"
 		}
 	}
 	
