--- a/war/index.html
+++ b/war/index.html
@@ -143,7 +143,7 @@
 				  radius: 24, // The radius of the inner circle
 				  corners: 1, // Corner roundness (0..1)
 				  rotate: 0, // The rotation offset
-				  color: '#e99', // #rgb or #rrggbb
+				  color: '#bdf', // #rgb or #rrggbb
 				  speed: 1, // Rounds per second
 				  trail: 60, // Afterglow percentage
 				  shadow: false, // Whether to render a shadow
